force-app/main/default/objects/Look__c/Look__c.object-meta.xml
<CustomObject>
    <label>Look</label>
    <nameField>
        <label>Look Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Looks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>