force-app/main/default/objects/Look__c/fields/Fake_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Fake_Owner_Name__c</fullName>
    <label>Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>