force-app/main/default/objects/Look__c/fields/is_Draft__c.field-meta.xml
<CustomField>
    <fullName>is_Draft__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Draft</label>
    <type>Checkbox</type>
</CustomField>