force-app/main/default/objects/Look__c/fields/is_Inspiration__c.field-meta.xml
<CustomField>
    <fullName>is_Inspiration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Inspiration</label>
    <type>Checkbox</type>
</CustomField>