force-app/main/default/objects/Look__c/fields/Layout__c.field-meta.xml
<CustomField>
    <fullName>Layout__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Layout</label>
    <referenceTo>Layout__c</referenceTo>
    <relationshipLabel>Looks</relationshipLabel>
    <relationshipName>Looks</relationshipName>
    <type>Lookup</type>
</CustomField>