force-app/main/default/objects/Look__c/fields/LayoutId__c.field-meta.xml
<CustomField>
    <fullName>LayoutId__c</fullName>
    <label>LayoutId</label>
    <length>5</length>
    <type>Text</type>
</CustomField>