force-app/main/default/objects/Look__c/fields/Look_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Look_Image_URL__c</fullName>
    <formula>&quot;/look1200x2100/&quot; + SKUs__c +&quot;/look.jpg&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Look Image URL</label>
    <type>Text</type>
</CustomField>