force-app/main/default/objects/Look__c/fields/LV_URL_Sharing__c.field-meta.xml
<CustomField>
    <fullName>LV_URL_Sharing__c</fullName>
    <formula>/*IF(BLANKVALUE(TECH_LV_LOCALE__c,&apos;eng-e1&apos;) == &apos;zhs-cn&apos;, $CustomMetadata.WRDB_LVCOM_URL__mdt.LVCOM_HOST_URL_CHINA.Path__c ,  $CustomMetadata.WRDB_LVCOM_URL__mdt.LVCOM_HOST_URL_WW.Path__c ) + &apos;/&apos;+  BLANKVALUE(TECH_LV_LOCALE__c,&apos;eng-e1&apos;)+ &apos;/&apos;+  $CustomMetadata.WRDB_LVCOM_URL__mdt.LVCOM_PATH.Path__c   + &apos;/&apos; +  BLANKVALUE( TECH_LV_PAGE_NAME__c ,&apos;recommendations&apos;) + &apos;/&apos; +  CASESAFEID(Id) +IF(ISBLANK(TECH_LV_DISPATCH_COUNTRY__c),&apos;&apos;, &apos;?dispatchCountry=&apos;+TECH_LV_DISPATCH_COUNTRY__c ) +&apos;&amp;campaign=look_&apos;+Id+&apos;&amp;A=DreamId&apos;*/


IF(BLANKVALUE(TECH_LV_LOCALE__c,&apos;eng-e1&apos;)==&apos;zhs-cn&apos;,$CustomMetadata.WRDB_LVCOM_URL__mdt.LVCOM_HOST_URL_CHINA.Path__c , $CustomMetadata.WRDB_LVCOM_URL__mdt.LVCOM_HOST_URL_WW.Path__c ) + &apos;/&apos;+ BLANKVALUE(TECH_LV_LOCALE__c,&apos;eng-e1&apos;)+ &apos;/&apos;+ $CustomMetadata.WRDB_LVCOM_URL__mdt.LVCOM_PATH.Path__c + &apos;/&apos; + BLANKVALUE( TECH_LV_PAGE_NAME__c ,&apos;recommendations&apos;) + &apos;/&apos; + BLANKVALUE(TECH_EnCrypted_LookId__c, CASESAFEID(Id)) +IF(ISBLANK(TECH_LV_DISPATCH_COUNTRY__c),&apos;&apos;, &apos;?dispatchCountry=&apos;+TECH_LV_DISPATCH_COUNTRY__c ) +&apos;&amp;campaign=look_&apos;+TECH_EnCrypted_LookId__c+&apos;&amp;A=DreamId&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LV URL Sharing</label>
    <type>Text</type>
</CustomField>