force-app/main/default/objects/Look__c/fields/Master_Product__c.field-meta.xml
<CustomField>
    <fullName>Master_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Product</label>
    <referenceTo>ProductCatalogue__c</referenceTo>
    <relationshipLabel>Looks</relationshipLabel>
    <relationshipName>Looks</relationshipName>
    <type>Lookup</type>
</CustomField>