force-app/main/default/objects/Look__c/fields/MasterSKU__c.field-meta.xml
<CustomField>
    <fullName>MasterSKU__c</fullName>
    <label>MasterSKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>