force-app/main/default/objects/Look__c/fields/My_Store__c.field-meta.xml
<CustomField>
    <fullName>My_Store__c</fullName>
    <description>Used for reporting</description>
    <formula>Store__r.RetailStoreId__c = TEXT($User.DefaultStore__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Store</label>
    <type>Checkbox</type>
</CustomField>