force-app/main/default/objects/Look__c/fields/Picture_URL_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Picture_URL_Mobile__c</fullName>
    <label>Picture URL Mobile</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>