force-app/main/default/objects/Look__c/fields/Share_with_store__c.field-meta.xml
<CustomField>
    <fullName>Share_with_store__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Share with store</label>
    <type>Checkbox</type>
</CustomField>