force-app/main/default/objects/Look__c/fields/SHORT_LV_URL_Sharing__c.field-meta.xml
<CustomField>
    <fullName>SHORT_LV_URL_Sharing__c</fullName>
    <label>SHORT_LV_URL_Sharing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>