force-app/main/default/objects/Look__c/fields/SHORT_Picture_URL__c.field-meta.xml
<CustomField>
    <fullName>SHORT_Picture_URL__c</fullName>
    <label>SHORT_Picture_URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>