force-app/main/default/objects/Look__c/fields/SKUs__c.field-meta.xml
<CustomField>
    <fullName>SKUs__c</fullName>
    <label>SKUs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>