force-app/main/default/objects/Look__c/fields/Source_JSON__c.field-meta.xml
<CustomField>
    <fullName>Source_JSON__c</fullName>
    <label>Source JSON</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>