force-app/main/default/objects/Look__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>Looks</relationshipLabel>
    <relationshipName>Looks</relationshipName>
    <type>Lookup</type>
</CustomField>