force-app/main/default/objects/Look__c/fields/Tech_Country__c.field-meta.xml
<CustomField>
    <fullName>Tech_Country__c</fullName>
    <description>used for reporting</description>
    <formula>TEXT(Store__r.StoreCountry__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>