force-app/main/default/objects/Look__c/fields/TECH_EnCrypted_LookId__c.field-meta.xml
<CustomField>
    <fullName>TECH_EnCrypted_LookId__c</fullName>
    <description>TO TEST</description>
    <label>TECH_EnCrypted_LookId</label>
    <type>TextArea</type>
</CustomField>