force-app/main/default/objects/Look__c/fields/TECH_LV_DISPATCH_COUNTRY__c.field-meta.xml
<CustomField>
    <fullName>TECH_LV_DISPATCH_COUNTRY__c</fullName>
    <label>TECH LV DISPATCH COUNTRY</label>
    <length>5</length>
    <type>Text</type>
</CustomField>