force-app/main/default/objects/Look__c/fields/TECH_LV_LOCALE__c.field-meta.xml
<CustomField>
    <fullName>TECH_LV_LOCALE__c</fullName>
    <defaultValue>&apos;eng-e1&apos;</defaultValue>
    <label>TECH_LV_LOCALE</label>
    <type>TextArea</type>
</CustomField>