force-app/main/default/objects/Look__c/fields/TECH_LV_PAGE_NAME__c.field-meta.xml
<CustomField>
    <fullName>TECH_LV_PAGE_NAME__c</fullName>
    <defaultValue>&apos;recommendations&apos;</defaultValue>
    <label>TECH LV PAGE NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>