force-app/main/default/objects/Look__c/fields/Tech_Zone__c.field-meta.xml
<CustomField>
    <fullName>Tech_Zone__c</fullName>
    <description>Used for reporting</description>
    <formula>Store__r.MANAGEMENT_ZONE_LEVEL_TECH__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zone</label>
    <type>Text</type>
</CustomField>