force-app/main/default/objects/Look__c/fields/Validity_Date__c.field-meta.xml
<CustomField>
    <fullName>Validity_Date__c</fullName>
    <defaultValue>ADDMONTHS( TODAY() ,12)</defaultValue>
    <label>Validity Date</label>
    <type>Date</type>
</CustomField>