force-app/main/default/objects/Look__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Is_Active__c</columns>
    <columns>is_Draft__c</columns>
    <columns>is_Inspiration__c</columns>
    <columns>Validity_Date__c</columns>
    <columns>Zone__c</columns>
    <columns>Country__c</columns>
    <columns>Store__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>